--- a/build.settings
+++ b/build.settings
@@ -14,14 +14,35 @@ settings = {
     	["plugin.google.play.services"] =
         {
             publisherId = "com.coronalabs"
-        },  -- key is the name passed to Lua's 'require()'
+        },  
+
+        -- key is the name passed to Lua's 'require()'
 		["CoronaProvider.gameNetwork.google"] =
 		{
 			-- required
 			publisherId = "com.coronalabs",
 			supportedPlatforms = { android = true }
-		},  	     
+		},
+
+
+		 ["CoronaProvider.ads.vungle"] =
+	   	{
+	      publisherId = "com.vungle",
+	   	},
+
+
+		["CoronaProvider.ads.inneractive"] =
+        {
+            publisherId = "com.inner-active",
+        },
+
+        -- FACEBOOK PLUGIN
+         ["facebook"] =
+        {
+            publisherId = "com.coronalabs"
+        },
         
+	        
     },
 	
 	android =
@@ -35,6 +56,7 @@ settings = {
             "android.permission.WRITE_EXTERNAL_STORAGE",
 			"android.permission.READ_PHONE_STATE",
 			"android.permission.VIBRATE",
+            "android.permission.ACCESS_NETWORK_STATE",
         },
 	
 	
